--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <html>
 <head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-265508435-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-265690402-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-265508435-1');
+  gtag('config', 'UA-265690402-1');
+</script>
 
 <title>iobit driver booster | features of IObit Driver Booster</title>
 <meta name="description" content="iobit driver booster" />
-</script>
+
+<style>
+		h1 {
+			text-align: center;
+		}
+	</style>
+
 </head>
+
 
 
 
