--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
   gtag('config', 'UA-265690402-1');
 </script>
-
+<meta http-equiv='content-language' content='en-gb'>
 <title>iobit driver booster | features of IObit Driver Booster</title>
 <meta name="description" content="iobit driver booster" />
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 		h1 {
 			text-align: center;
@@ -44,7 +44,7 @@
     transition: .3s ease-in;" rel="nofollow">Get Started Here</a>
 </div>
 
-<p>The most common way of boosting the operating system by iobit driver booster if it shows you the issue of outdated drivers. Use device manager, the built-in Windows tool, is also quite useful. By using the driver manager you can easily update a driver but some users are worried about the utility security.</p>
+<p>The most common way of boosting the operating system by <a style="color:red;" href="https://iobitdriverbooster.github.io/">iobit driver booster</a> if it shows you the issue of outdated drivers. Use device manager, the built-in Windows tool, is also quite useful. By using the driver manager you can easily update a driver but some users are worried about the utility security.</p>
 <br>
 
 <h2>What are the features of IObit Driver Booster?</h2>
@@ -81,12 +81,12 @@
 <h2>Is IObit driver booster good?</h2>
 
 <br>
-<p>In today's world there are manu driver management tools out there. The iobit driver booster is a best way to boost the driver. It has the necessary features to ensure you continually update your drivers. It is available according to your different windows version and it is available for other operating systems.</p>
+<p>In today's world there are manu driver management tools out there. The <a style="color:red;" href="https://iobitdriverbooster.github.io/">iobit driver booster</a> is a best way to boost the driver. It has the necessary features to ensure you continually update your drivers. It is available according to your different windows version and it is available for other operating systems.</p>
 
 <br>
 <h2>Is Driver Booster Safe?</h2>
 <br>
-<p>The iobit driver booster is launched by iobit company which is one of the popular company found in 2004. The company designed the program make driver management easy on windows easier. It helps you to detect the outdated device drivers and find the latest driver versions online. You can also download and install the drivers and boost your desktop device performance.</p> 
+<p>The <a style="color:red;" href="https://iobitdriverbooster.github.io/">iobit driver booster</a> is launched by iobit company which is one of the popular company found in 2004. The company designed the program make driver management easy on windows easier. It helps you to detect the outdated device drivers and find the latest driver versions online. You can also download and install the drivers and boost your desktop device performance.</p> 
 
 <br>
 
