--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </script>
 <meta http-equiv='content-language' content='en-gb'>
 <title>iobit driver booster | features of IObit Driver Booster</title>
-<meta name="description" content="iobit driver booster" />
+<meta name="description" content="It protects your PC from hardware failures, conflicts, and resolves system crash problems caused by outdated drivers. " />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 		h1 {
