--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <br>
 
 <div class="sml-button aligncenter" style="display:flex;justify-content:center;">
-<a href="http://actmynow.s3-website-us-west-1.amazonaws.com" style="display: inline-block;
+<a href="https://iobitdriverbooster.webconnectus.com" style="display: inline-block;
     background:#183153 ;
     padding: 12px 35px;
     color: #fff;
